# NJDOT-FuelUp-API

./: README.md  njdot-fuelup-api.cabal  njdot-fuelup.db  schema.sql
csv-data/: bridges.csv  stations.csv
src/: Api.hs  CSVtoDB.hs  Database.hs  Lib.hs  Model.hs
src/Api/: Internal.hs
src/Database/: Internal.hs
src/Internal/: Api.hs  Database.hs
test/: Spec.hs
