name:                njdot-fuelup-api
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/ismailmustafa/njdot-fuelup-api#readme
license:             BSD3
license-file:        LICENSE
author:              Ismail Mustafa
maintainer:          ismailmustafa@rocketmail.com
copyright:           2015 Ismail Mustafa
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api
                     , Api.Internal
                     , Database
                     , Database.Internal
                     , Model
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , cassava
                     , filepath
                     , csv
                     , either-unwrap
                     , sqlite-simple
                     , monads-tf
                     , either
                     , transformers
  default-language:    Haskell2010

executable njdot-fuelup-api-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , njdot-fuelup-api
  default-language:    Haskell2010

test-suite njdot-fuelup-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , njdot-fuelup-api
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ismailmustafa/njdot-fuelup-api
